<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/discover_cl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/discover_cv_Item"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTintMode="screen">

            <ImageView
                android:id="@+id/work_cover"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/coverText"
                android:scaleType="centerCrop"
                android:src="@drawable/el_imperio_final"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/work_title"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/titleText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@id/work_cover"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/work_author"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/authorText"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/work_title"
                app:layout_constraintTop_toBottomOf="@+id/work_title" />

            <TextView
                android:id="@+id/work_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/yearText"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/work_author"
                app:layout_constraintTop_toBottomOf="@+id/work_author" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>